[package]
name = "todo-threader"
description = "A CLI-Tool to access the arduino todo-device"
authors = ["doncato <doncato@notarobot.cyou>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { features = ["cargo"], version = "3.1" }
env_logger = "0.9"
log = "0.4"
serial = "0.4"
serialport = "4"
